Kill the default appearance on inputs

--- a/lib/src/components/_stacks-inputs.less
+++ b/lib/src/components/_stacks-inputs.less
@@ -39,6 +39,11 @@
 //  ----------------------------------------------------------------------------
 .s-input,
 .s-textarea {
+    // Reset the appearance
+    -webkit-appearance: none;
+    -moz-appearance: none;
+         appearance: none;
+
     width: 100%;
     margin: 0; // A guard against Core's default margins
     padding: @input-padding;
