--- a/docs/assets/css/stacks-documentation.css
+++ b/docs/assets/css/stacks-documentation.css
@@ -742,6 +742,9 @@ a.s-badge__important:hover {
 }
 .s-input,
 .s-textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   width: 100%;
   margin: 0;
   padding: 0.7em;
